--- a/frontend/src/components/styles/fantasy.css
+++ b/frontend/src/components/styles/fantasy.css
@@ -5,6 +5,7 @@
   max-width: 1100px;
   margin: auto;
   padding-top: 3rem;
+  padding-bottom:2rem;
   color: #1c192d;
 }
 .fantasy h1 {
@@ -17,4 +18,111 @@
   display: block;
   height: 10px;
   width: 300px;
+}
+.team-container {
+		max-width:1000px; 
+		min-height:55vh;
+		border:3px solid #1c192d;
+		margin:auto;
+		position:relative;
+		background:transparent;
+}
+.left-team-container{
+		width:50%;
+		position:absolute;
+		left:0;
+		border-right:2px solid #1c192d;	
+		height:100%;
+}
+.left-goal{
+		position:absolute;
+		height:35%;
+		width:10%;
+		top:50%;
+		left:0%;
+		transform:translateY(-50%);
+		border-top:2px solid #1c192d;
+		border-right:2px solid #1c192d;
+		border-bottom:2px solid #1c192d;
+}
+.right-goal{
+		position:absolute;
+		height:35%;
+		width:10%;
+		top:50%;
+		right:0%;
+		transform:translateY(-50%);
+		border-top:2px solid #1c192d;
+		border-left:2px solid #1c192d;
+		border-bottom:2px solid #1c192d;
+}
+.circle{
+		position:absolute;
+		border : 2px solid #1c192d;
+		border-radius : 50%;
+		top:50%;
+		left:50%;
+		height:22vh;
+		width:22vh;
+		transform:translate(-50%,-50%)
+}
+
+.team{
+		position:absolute;
+		width:100%;
+		height:100%;
+		display:flex;
+}
+.gk-container{
+		flex:1;
+		justify-content:center;
+		align-items:center;
+		display:flex;
+}
+.gk {
+		min-height:80px;
+}
+.gk-image{
+		margin:auto;
+ height:50px;
+ width:50px;
+ border-radius:50%;
+		overflow:hidden;
+}
+.gk-image svg{
+
+		height:100%;
+		width:100%;
+		object-fit:contain;
+}
+.gk-name{
+		color:#1c192d;
+}
+.def-container{
+		flex:1;
+		display:flex;
+		flex-direction:column;
+		align-items:center;
+		justify-content:center;
+		gap:1rem;
+}
+.mid-container{
+		flex:1;
+}
+.fwd-container{
+		flex:1;
+}
+
+.bench-container{
+		padding-top:3rem;
+}
+.bench h3{
+		color:#1c192d;
+}
+.bench h3::after {
+  content: "";
+  background: #ff3939;
+  display: block;
+  height: 5px;
+  width: 100px;
 }
