detailed stats page

--- a/frontend/src/components/styles/stats.css
+++ b/frontend/src/components/styles/stats.css
@@ -20,6 +20,7 @@
 }
 /* filter */
 .filter-container {
+		position:relative;
   display: flex;
   padding: 1rem;
   gap: 1rem;
@@ -48,6 +49,7 @@ select {
 }
 .filter-button >p{
 		color:white;
+		border-radius:5px;
 		padding: 0.5rem 1rem 0.5rem 1rem;
 		background-color:#1c192d;
 }
