--- a/frontend/src/components/styles/player.css
+++ b/frontend/src/components/styles/player.css
@@ -19,8 +19,122 @@
   width: 180px;
 }
 .player-stats-box{
-		padding:2rem;
+		display:grid;
 		margin:1rem;
-		border:2px solid black; 
+		border:4px solid #1c192d; 
+		border-radius:10px;
+		min-height:60vh;
+}
+.main-stats{
+		display:grid; grid-template-areas:'pimg pimg pstats pstats pstats'
+						    'pimg  pimg sstats sstats sstats';
+}
+.detail-stats{
+		display:grid;
 
+}
+.playerimg-container{
+		grid-area:pimg;
+		position:relative;
+}
+.playerimg{
+		height:200px;
+		width:200px;
+		position:absolute;
+		overflow:hidden;
+		top:50%;
+		left:50%;
+		transform:translate(-50%,-50%);
+}
+.playerimg > img{
+		height:100%;
+		width:100%;
+		object-fit:contain;
+
+}
+.player-primary-stats{
+		grid-area:pstats;
+		padding:1rem;
+}
+.pstats-box{
+		background-color:#1c192d;
+		color:white;
+		margin:auto;
+		border:2px solid #1c192d;
+		border-radius:5px;
+		display:flex;
+		flex-direction:row;
+		justify-content:space-evenly;
+		padding:1rem 0rem 1rem 0rem;
+}
+.datatag{
+		font-weight:400;
+}
+.datatag::after {
+  content: "";
+  display: block;
+  background: #ff3939;
+  height: 2px;
+  margin-top: 2px;
+  margin-bottom: 3px;
+  width: 40px;
+}
+.player-secondary-stats{
+		grid-area:sstats;
+		padding:1rem;
+}
+.sstats-box{
+		margin:auto;
+		border:2px solid #1c192d;
+		border-radius:5px;
+		display:grid;
+		align-items:center;
+		justify-content:space-evenly;
+		grid-template-columns:auto auto auto auto auto;
+		padding:1rem 0rem 1rem 0rem;
+}
+.gameweek-header, .prevseason-header, .fantasy-header{
+		padding-left:1rem;
+}
+.gameweek-header:hover , .prevseason-header:hover, .fantasy-header:hover{
+		cursor:pointer;
+}
+.gameweek-header::after , .prevseason-header::after, .fantasy-header::after{
+  content: "";
+  display: block;
+  background: #ff3939;
+  height: 5px;
+  margin-top: 2px;
+  margin-bottom: 3px;
+  width: 90px;
+}
+.gameweek-list, .prevseason-list, .fantasy-list{
+		display:grid;
+		gap:0.5rem;
+		padding:1rem;
+}
+.gameweek , .prevseason, .fantasy{
+		width:100%;
+		border:1px solid #1c192d;
+}
+.fantasy{
+		margin:auto;
+		border:2px solid #1c192d;
+		border-radius:5px;
+		display:grid;
+		align-items:center;
+		justify-content:space-evenly;
+		grid-template-columns:auto auto auto auto auto;
+		padding:1rem 0rem 1rem 0rem;
+}
+.gameweek, .prevseason{
+		margin:auto;
+		border:2px solid #1c192d;
+		font-size:12px;
+		border-radius:5px;
+		display:grid;
+		align-items:center;
+		justify-content:space-evenly;
+		grid-template-columns:auto auto auto auto auto;
+		padding:0.5rem 0rem 0.5rem 0rem;
 }
